Closed Bug 48736 Opened 24 years ago Closed 24 years ago

[MLK] Leaking form HTTP headers

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: beard, Assigned: pollmann)

References

()

Details

(Keywords: memory-leak, Whiteboard: [nsbeta3+] fix in hand)

Call to ToNewCString(), result is passed to NS_NewPostDataStream(), which copies 
it, so string leaks.
Reassigning to pollmann.
Assignee: rods → pollmann
Nominating for nsbeta3, as this leak will occur with every form submission.
Keywords: nsbeta3
Looks like the post buffer is cleaned up only in the failure case:

915       if (NS_OK != rv) {
916         delete [] postBuffer;
917       }

The fix is trivial and small, suggest nsbeta3+.
Status: NEW → ASSIGNED
Whiteboard: [nsbeta3+]
Marking nsbeta3+
Whiteboard: [nsbeta3+] → [nsbeta3+] fix in hand
Fix checked in.

There is no way to verify this fix by running the program.  To verify by looking
at the code, look here:
http://lxr.mozilla.org/seamonkey/source/layout/html/forms/src/nsFormFrame.cpp#890

Before this was a char* that was only deleted in some cases.
Now it is an nsCAutoString, which is automatically deleted on destruction.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Per Pollmann's comments:

Marking VERIFIED FIXED on:
- LinuxRH62 2000-09-08-08-M18 Commercial
- Win98     2000-09-08-08-M18 Mozilla
- MacOS86   2000-09-07-04-M18 Commercial
Status: RESOLVED → VERIFIED
OS: All
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.