Bug 48736: Stop leaking form data every form submit (and fix 2 warnings), r=jst@netscape.com